allow many to many test to sample type relationships